Map was covering the navbar, so i fixed it. Add an aditional line of code in map.scss and navbar.scss

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -3,6 +3,7 @@
   margin-right: 10px;
   padding: 5px;
   justify-content: center;
+  z-index: 50;
 
 }
 
